--- a/src/pageUser/userInfo/userInfo.scss
+++ b/src/pageUser/userInfo/userInfo.scss
@@ -69,3 +69,51 @@ page {
     }
   }
 }
+
+.nikeNamePopup {
+  padding: 30rpx;
+  border-radius: 30rpx;
+
+  .container {
+    padding: 30rpx;
+    background: #fff;
+    border-radius: 20rpx;
+
+    .popHeader {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .title {
+        color: #1296db;
+        font-size: 26rpx;
+      }
+
+      .close {
+        padding: 6rpx;
+      }
+    }
+
+    .content {
+      padding: 30rpx 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .input {
+        width: 100%;
+        height: 100rpx;
+        font-size: 28rpx;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 20rpx;
+      }
+    }
+
+    .footer {
+      padding: 10rpx 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
