--- a/src/pages/bonus/bonus.scss
+++ b/src/pages/bonus/bonus.scss
@@ -73,5 +73,12 @@ page {
         }
       }
     }
+    .loading-text {
+      text-align: center;
+      font-size: 28rpx;
+      color: #666;
+      padding: 20rpx 0;
+    }
   }
 }
+
