--- a/src/pageUser/setting/setting.scss
+++ b/src/pageUser/setting/setting.scss
@@ -66,3 +66,87 @@ page {
     border-radius: 10rpx;
   }
 }
+
+.phonePopup {
+  background: #fff;
+  padding: 30rpx;
+  width: 70vw;
+  border-radius: 30rpx;
+
+  .container {
+    padding: 30rpx;
+    background: #fff;
+    border-radius: 20rpx;
+
+
+    .popHeader {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .title {
+        color: #1296db;
+        font-size: 26rpx;
+      }
+
+      .close {
+        padding: 6rpx;
+      }
+    }
+
+    .content {
+      padding: 30rpx 0;
+      display: flex;
+      flex-direction: column;
+
+      .input {
+        width: 100%;
+        height: 100rpx;
+        font-size: 28rpx;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 20rpx;
+      }
+
+      .yanz {
+        display: flex;
+        align-items: center;
+        height: 100rpx;
+        justify-content: space-between;
+        border-bottom: 1px solid #ddd;
+
+        .password {
+          flex: 1;
+          height: 80rpx;
+          font-size: 28rpx;
+          margin-bottom: 20rpx;
+        }
+
+        .btn {
+          border: 1px solid #d2d2d2;
+          padding: 10rpx 40rpx;
+          border-radius: 10rpx;
+          font-size: 24rpx;
+          color: #333;
+          text-align: center;
+        }
+      }
+    }
+
+    .footer {
+      padding: 10rpx 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .button {
+        width: 100%;
+        background: #1296db;
+        text-align: center;
+        padding: 10rpx 5rpx;
+        border-radius: 40rpx;
+        color: #fff;
+        font-size: 28rpx;
+      }
+    }
+  }
+}
